# movie-graph

./: .gitignore  README.md  fly.toml  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  convert.yml  deploy.yml  pages.yml  test.yml
src/movie-graph/: __main__.py  compact.py  logger.py  neo.py  neo4j.py  process.py  schema.py  sqlite.py  stats.py
src/static/: app.js  index.html  style.css
